# lucis

./: .gitignore  Cargo.toml  LICENSE  README.md  format_and_lint.sh  test.lua  test2.lua
doc/: features.md
doc/performance/: ideas.md
doc/rust/: file_structure.md
scene/: cone.lua  cyl.lua  cylinder.lua  fog.lua  lcyl.lua  macho-cows.lua  soft_shadows.lua  test.lua  test2.lua
src/: lib.rs  main.rs  raytrace.rs
src/geometry/: mesh.rs  mod.rs  primitive.rs  ray.rs  volume.rs
src/lua/: mod.rs
src/model/: mod.rs
src/scene/: color.rs  intersection.rs  light.rs  lua.rs  mod.rs  node.rs  texture.rs
