[package]
name = "lucis"
version = "0.1.0"
authors = ["Shaun Bennett <me@phinary.ca>"]
edition = "2018"

[[bin]]
name = "lucis"
path = "src/main.rs"
doc = false

[dependencies]
image = "0.20.1"
nalgebra = "0.16.10"
rand = "0.6.0"
rlua = "0.15.3"
roots = "0.0.4"
rayon = "1.0.3"
pbr = "1.0.1"
scoped_threadpool = "0.1.*"
